Correct align components

--- a/headphones/4-styles.css
+++ b/headphones/4-styles.css
@@ -251,6 +251,7 @@ footer {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    padding: 0 40px;
 }
 .foot-section p {
     color: rgb(170, 165, 165);
@@ -278,14 +279,5 @@ footer {
     .foot-section p {
         position: relative;
         top: 50px;
-    }
-}
-/*tablettes*/
-@media(max-width: 750px){
-    .foot-section .social-logo {
-        padding-right: 40px;
-    }
-    .foot-section .main-logo img {
-        padding-left: 40px;
     }
 }
